fix customer column visible in customer detail

--- a/web/css/sb-admin-2.css
+++ b/web/css/sb-admin-2.css
@@ -12611,3 +12611,8 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
+table.hideFirstColumn td:first-child,
+table.hideFirstColumn th:first-child {
+  display: none;
+}
